# Bukr

./: .dockerignore  .gitignore  Dockerfile.frontend  QUICKSTART.md  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  payload.json  render.yaml  run-all-tests.sh  start-backend.sh  tailwind.config.cjs  tailwind.config.ts  test-stack.sh  tsconfig.app.json  verify-backups.sh  vite.config.ts  vitest.config.ts
.kombai/: stack.json
backend/: openapi.yaml  render.yaml  run-migrations.sh  test-db-connection.go
backend/core/: .dockerignore  Cargo.toml  Dockerfile
backend/core/src/: config.rs  db.rs  error.rs  fees.rs  main.rs  notifications.rs
backend/core/src/analytics/: handler.rs  mod.rs
backend/core/src/payments/: handler.rs  mod.rs  service.rs
backend/core/src/promos/: dto.rs  handler.rs  mod.rs  repository.rs  service.rs
backend/core/src/scanner/: handler.rs  mod.rs  service.rs  usage_engine.rs
backend/core/src/tickets/: dto.rs  handler.rs  mod.rs  repository.rs  service.rs  transfer.rs
backend/core/src/vendors/: dto.rs  handler.rs  mod.rs  repository.rs  service.rs
backend/gateway/: .dockerignore  Dockerfile  go.mod  go.sum  test-db-connection.go  test-db.go
backend/migrations/: 001_create_users.sql  002_create_events.sql  003_create_promo_codes.sql  004_create_tickets.sql  014_vendor_system.sql  (+24 more)
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  graph.html  graph.json
public/: manifest.json
src/: App.tsx  fonts.d.ts  index.css  main.tsx  serviceWorker.ts
(+230 files in other folders)
